# sanaap-backend-challenge-api

./: .env.example  .gitignore  Makefile  README.md  compose.yaml  dockerfile  manage.py  pyproject.toml
sanaap/: container.py  exceptions.py
sanaap/api/: apps.py  auth.py  exc_handler.py  permissions.py  serializers.py  urls.py  views.py
sanaap/core/: asgi.py  envs.py  exc_handler.py  settings.py  urls.py  wsgi.py
sanaap/docs/: admin.py  apps.py  enums.py  models.py
sanaap/docs/management/commands/: rbac.py  users.py
sanaap/docs/migrations/: 0001_initial.py
sanaap/handlers/: __init__.py  doc_delete_handler.py  doc_modify_handler.py  doc_upload_handler.py  login_handler.py  signup_handler.py
sanaap/services/: __init__.py  jwt_service.py  storage_service.py
tests/: conftest.py  test_container.py
tests/api/: test_token_auth.py
tests/api/endpoints/: test_delete_doc_endpoint.py  test_get_doc_endpoint.py  test_health_endpoint.py  test_list_docs_endpoint.py  test_login_endpoint.py  test_modify_doc_endpoint.py  test_signup_endpoint.py  test_upload_endpoint.py
tests/handlers/: test_doc_delete_handler.py  test_doc_modify_handler.py  test_doc_upload_handler.py  test_login_handler.py  test_signup_handler.py
tests/services/: test_jwt_service.py  test_minio_service.py
