[project]
name = "sanaap-backend-challenge-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "django>=5.2.0,<5.3",
  "django-redis>=6.0.0",
  "djangorestframework>=3.16.1",
  "drf-spectacular>=0.29.0",
  "minio>=7.2.20",
  "psycopg>=3.3.2",
  "punq>=0.7.0",
  "pydantic-settings>=2.12.0",
  "pyjwt>=2.10.1",
]

[dependency-groups]
dev = [
  "django-stubs>=5.2.8",
  "django-stubs-ext>=5.2.8",
  "djangorestframework-stubs>=3.16.6",
  "pyright>=1.1.407",
  "pytest>=9.0.2",
  "pytest-django>=4.11.1",
  "ruff>=0.14.8",
]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 90
cache-dir = ".cache/ruff"
fix = true
extend-exclude = ["**/migrations/**"]

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-q --tb=line --maxfail=1"
console_output_style = "count"
log_cli = false
log_cli_level = "INFO"
log_cli_format = "[%(name)s]  -- %(message)s"
cache_dir = ".cache/pytest"
DJANGO_SETTINGS_MODULE = "sanaap.core.settings"
